--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ venv/
 __pycache__/
 .rich_reference.py
 testcsv.csv
-textualtest_chatgpt.py
+textualtest.py
 textualtest_claude.py
 textualtest_gemini.py
+cli.py
